<?xml version="1.0"?>
<package format="2">
  <name>fluxvla_franka_controllers</name>
  <version>0.1.1</version>
  <description>FluxVLA Franka controllers for Cartesian impedance, joint-position Ruckig smoothing, and joint-impedance Ruckig control on Franka Emika research robots.</description>
  <maintainer email="fluxvla-maintainers@example.com">FluxVLA Maintainers</maintainer>
  <license>MIT</license>

  <author>FluxVLA Contributors</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>eigen</build_depend>

  <build_export_depend>message_runtime</build_export_depend>

  <depend>controller_interface</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>eigen_conversions</depend>
  <depend>franka_hw</depend>
  <depend>franka_gripper</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>libfranka</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>
  <depend>ruckig</depend>

  <exec_depend>franka_control</exec_depend>
  <exec_depend>franka_description</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>controller_manager_msgs</exec_depend>
  <exec_depend>panda_moveit_config</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <controller_interface plugin="${prefix}/fluxvla_franka_controllers_plugin.xml"/>
  </export>
</package>
